v.1.5.2 terms of use

--- a/src/main/java/com/opaleye/snackntm/app.css
+++ b/src/main/java/com/opaleye/snackntm/app.css
@@ -1,3 +1,8 @@
+ .root {
+	-fx-font-size: 13px;
+	-fx-font-family: "Verdana";
+ }
+ 
 #progressPane {
 	-fx-border-width: 1;
 	-fx-border-color: black;
