--- a/src/main/java/com/opaleye/snackntm/MainStage.fxml
+++ b/src/main/java/com/opaleye/snackntm/MainStage.fxml
@@ -170,9 +170,9 @@
                   <MenuItem mnemonicParsing="false" onAction="#handleConclusionExcel" text="Export Conclusions (Excel)" />
                </items>
              </Menu>
-             <Menu mnemonicParsing="false" text="Help">
+             <Menu mnemonicParsing="false" text="Terms">
                <items>
-                 <MenuItem mnemonicParsing="false" onAction="#handleAbout" text="About" />
+                 <MenuItem mnemonicParsing="false" onAction="#handleTermsOfUse" text="Terms of use" />
                </items>
              </Menu>
            </menus>
